WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187282
Fix regression introduced in
r233335
https://bugs.webkit.org/show_bug.cgi?id=187282
Summary
Fix regression introduced in r233335
youenn fablet
Reported
2018-07-02 17:41:52 PDT
We should early return in case the load is navigate.
Attachments
Patch
(2.75 KB, patch)
2018-07-02 17:43 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(3.04 KB, patch)
2018-07-03 11:09 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(12.79 MB, application/zip)
2018-07-03 13:07 PDT
,
EWS Watchlist
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2018-07-02 17:43:54 PDT
Created
attachment 344158
[details]
Patch
Chris Dumez
Comment 2
2018-07-03 08:51:49 PDT
Comment on
attachment 344158
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=344158&action=review
> Source/WebKit/ChangeLog:10 > +
Please explain the fix in the changelog.
youenn fablet
Comment 3
2018-07-03 11:09:51 PDT
Created
attachment 344198
[details]
Patch
EWS Watchlist
Comment 4
2018-07-03 13:07:26 PDT
Comment on
attachment 344198
[details]
Patch
Attachment 344198
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/8426712
New failing tests: http/tests/security/canvas-remote-read-remote-video-localhost.html http/tests/preload/onload_event.html
EWS Watchlist
Comment 5
2018-07-03 13:07:38 PDT
Created
attachment 344207
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
WebKit Commit Bot
Comment 6
2018-07-03 17:24:57 PDT
Comment on
attachment 344198
[details]
Patch Clearing flags on attachment: 344198 Committed
r233491
: <
https://trac.webkit.org/changeset/233491
>
WebKit Commit Bot
Comment 7
2018-07-03 17:24:58 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-07-03 17:26:13 PDT
<
rdar://problem/41799926
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug