Fix regression introduced in r233335 https://bugs.webkit.org/show_bug.cgi?id=187282

Reviewed by Chris Dumez.

When checking for navigation loads, we need to return whether the request URL matches the service worker URL.
Before this patch, if the request URL was not matching the service worker URL, we were using the origin/referrer
which should only be used for subresource loads.

Covered by imported/w3c/web-platform-tests/service-workers/service-worker/claim-with-redirect.https.html
being no longer flaky.

* WebProcess/Storage/WebSWContextManagerConnection.cpp:
(WebKit::isValidFetch):


Canonical link: https://commits.webkit.org/202576@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233491 268f45cc-cd09-0410-ab3c-d52691b4dbfc